Starting Checkin Build

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   
   <meta charset="utf-8">
-  <title>AngularMaterial</title>
+  <title>School Pulse</title>
   <base href="/">
   <!-- Google imports legacy fonts -->
 
